[tool.poetry]
name = "repl-nix-movie-recommendation-system"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_movie_recommendation_system"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
streamlit = "^1.32.2"
pydrive = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
